// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`useTranslation() hook > returns original phrase with ReactNode variable given no language files 1`] = `
[
  "Hello ",
  <strong>
    John
  </strong>,
  "!",
]
`;

exports[`useTranslation() hook > returns translated phrase with ReactNode variable if locale prop is given 1`] = `
[
  "Hallo ",
  <strong>
    John
  </strong>,
  "!",
]
`;
